@@ -1,0 +1,4 @@
+#!/bin/bash -x
+
+juju deploy --repository=. local:precise/sks
+juju expose sks
