@@ -1,0 +1,32 @@
+# Overview
+
+SKS is a synchronizing public key server, which functions as a directory service
+for OpenPGP keys. This charm can be used to deploy a standalone server or a
+peering cluster of SKS instances.
+
+# Installation
+
+To deploy this charm you will need at a minimum: a cloud environment, working
+Juju installation and a successful bootstrap. Once bootstrapped, deploy this
+SKS charm with:
+
+ $ juju deploy hockeypuck
+
+Hockeypuck requires a PostgreSQL database:
+
+ $ juju deploy postgresql
+ $ juju add-relation hockeypuck postgresql:db
+
+Hockeypuck can gossip with other Hockeypuck peers:
+
+ $ juju add-unit hockeypuck
+ $ juju add-relation hockeypuck/0 hockeypuck/1
+
+Or with SKS:
+
+ $ juju deploy sks
+ $ juju add-relation hockeypuck sks
+
+Expose the Hockeypuck keyserver with:
+
+juju expose hockeypuck
