@@ -1,0 +1,35 @@
+#!/bin/bash -e
+
+# Install Go language tools to provision Hockeypuck from source
+apt-get install -q -y python-software-properties
+apt-add-repository ppa:hockeypuck/unstable
+apt-get update
+apt-get install -q -y hockeypuck
+
+rm -rf /var/lib/hockeypuck/recon-ptree
+mkdir -p /var/lib/hockeypuck/recon-ptree
+chown -R hockeypuck:hockeypuck /var/lib/hockeypuck/recon-ptree
+
+mkdir -p /etc/hockeypuck/hockeypuck.conf.d
+
+cat >/etc/hockeypuck/hockeypuck.conf.d/00-warn <<EOF
+# Generated by hockeypuck charm install hook
+# DO NOT EDIT
+EOF
+
+cat >/etc/hockeypuck/hockeypuck.conf.d/01-base <<EOF
+
+[hockeypuck]
+logfile="/var/log/hockeypuck/hockeypuck.log"
+
+[hockeypuck.hkp]
+bind=":11371"
+webroot="/var/lib/hockeypuck/www"
+
+[conflux.recon.leveldb]
+path="/var/lib/hockeypuck/recon-ptree"
+
+EOF
+
+# Whoa there, I said, whoa!
+service hockeypuck stop || true
