@@ -1,0 +1,18 @@
+name: hockeypuck
+summary: Hockeypuck is an OpenPGP public key server developed in Go.
+maintainer: Casey Marshall <casey.marshall@canonical.com>
+description: |
+ Hockeypuck provides OpenPGP public key directory services over the HTTP Keyserver
+ Protocol (HKP). It is capable of peering with SKS and other Hockeypuck instances
+ to propagate public key certification changes over a gossip network protocol.
+categories:
+ - applications
+requires:
+  pgsql:
+    interface: pgsql
+provides:
+  keyserver:
+    interface: hkp
+peers:
+  recon:
+    interface: recon
