@@ -1,0 +1,25 @@
+#!/bin/bash -e
+
+apt-get install -q -y sks
+
+# Enable SKS service
+sed -i 's/initstart=no/initstart=yes/' /etc/default/sks
+
+# Write a basic sksconf
+if [ -e "/etc/sks/sksconf" ]; then
+	mv /etc/sks/sksconf /etc/sks/sksconf.$(date +%s).sks-charm.bak
+fi
+
+cat >/etc/sks/sksconf <<EOF
+hostname: $(unit-get public-address)
+
+hkp_address: 0.0.0.0
+hkp_port: 11371
+
+recon_address: 0.0.0.0
+recon_port: 11370
+EOF
+
+if [ ! -d "/var/lib/sks/DB" ]; then
+	su -l debian-sks -c "/usr/sbin/sks build"
+fi
